# Operating_Systems

lab1/: Creator.cpp  Main.cpp  Reporter.cpp
lab2/: lab2_tests.cpp  lab2_threads.cpp
lab3/: CMakeLists.txt  README.md  main.cpp  test_lab3.cpp
lab4/: CMakeLists.txt  README.md
lab4/include/: shared.h  win_handle.h
lab4/src/: Receiver.cpp  Sender.cpp
lab4/tests/: tests.cpp
